# ETL_Boas_Praticas_Soft_Eng

./: .gitignore  README.md  README_English.md  README_PT.md  pyproject.toml
app/: main.py
app/pipeline/: extract.py  load.py  transform.py
app/test/: test_transform.py
data/Input/: dados_seguidores.xls  dados_seguidores2.xls
data/output/: output.xlsx
docs/: README.md
