[project]
name = "y"
version = "0.1.0"
description = "Projeto de ETL com estrutura de desenvolvimento mais profissional"
authors = [
    {name = "y"}
]
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "xlrd (>=2.0.1,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

