[project]
name = "y"
version = "0.1.0"
description = "Projeto de ETL com estrutura de desenvolvimento mais profissional"
authors = [
    {name = "y"}
]
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "xlrd (>=2.0.1,<3.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "taskipy (>=1.14.1,<2.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "blue (>=0.9.1,<0.10.0)",
    "mkdocs (>=1.6.1,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
format = "isort . && blue ."  ##para organizaro código seguindo os comandos do isort e blue